--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Hi, I am Gabriel</h2>
-							<p>
-								This portfolio contains my professional accomplishments and contact information. <br />Please, feel free
-								to mess around.
-							</p>
+							<p>This portfolio contains my professional accomplishments and contact information.</p>
 						</header>
 						<p>
 							With a solid career of over a decade working with Infor LN, I have specialized in developing solutions
