--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
 				<!-- One -->
 				<section id="one">
 					<div class="image main" data-position="center">
-						<img src="images/banner.jpg" alt="" />
+						<img src="images/banner.png" alt="" />
 					</div>
 					<div class="container">
 						<header class="major">
 							<h2>Hi, I am Gabriel</h2>
-							<p>This portfolio contains my professional accomplishments and contact information.</p>
 						</header>
 						<p>
 							With a solid career of over a decade working with Infor LN, I have specialized in developing solutions
@@ -69,7 +68,7 @@
 						</p>
 						<p>
 							On my free time I like to solve problems and create my own projects, using mainly JavaScript, React and
-							Node.js. Currently I'm working on my Wedding E-commerce Website.
+							Node.js. Currently, I'm working on my Wedding E-commerce Website.
 						</p>
 					</div>
 				</section>
@@ -86,9 +85,10 @@
 							<li class="icon solid fa-code">Write/Design Code</li>
 							<li class="icon solid fa-cubes">Functional Testing</li>
 							<li class="icon solid fa-book">Create Documentation</li>
-							<li class="icon solid fa-coffee">Managing Projects</li>
+							<li class="icon solid fa-tasks">Managing Projects</li>
 							<li class="icon solid fa-bolt">Proactivity</li>
 							<li class="icon solid fa-users">Team-work</li>
+							<i class="fa-solid fa-diagram-project"></i>
 						</ul>
 					</div>
 				</section>
@@ -101,6 +101,7 @@
 							Accomplishments below include not only LN ERP but also some personal projects using other technologies.
 						</p>
 						<div class="features">
+							<article></article>
 							<article>
 								<a href="#" class="image"><img src="images/infor-logo.png" alt="" /></a>
 								<div class="inner">
