corrected few texts and articles

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					</div>
 					<div class="container">
 						<header class="major">
-							<h2>Hi, I am Gabriel</h2>
+							<h2>Hi, I'm Gabriel</h2>
 						</header>
 						<p>
 							With a solid career of over a decade working with Infor LN, I have specialized in developing solutions
@@ -101,20 +101,14 @@
 							Accomplishments below include not only LN ERP but also some personal projects using other technologies.
 						</p>
 						<div class="features">
-							<article></article>
 							<article>
 								<a href="#" class="image"><img src="images/infor-logo.png" alt="" /></a>
 								<div class="inner">
 									<h4>BFlow Functionality</h4>
 									<p>
-										Creation and use of Business Flow automation tools for LN Cloud Edition functionalities. These tool
+										Creation and use of Business Flow automation tools for LN Cloud Edition functionalities. This tool
 										helped optimize operations and improve the end-user experience, making the product failure-proof.
 									</p>
-								</div>
-							</article>
-							<article>
-								<a href="#" class="image"><img src="images/infor-logo.png" alt="" /></a>
-								<div class="inner">
 									<h4>Improved Integration Between Modules</h4>
 									<p>
 										Improved the integration between the Brazilian Localization and the financial module when creating
