adding pages to portfolio

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 								</div>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/hangman-game.png" alt="" /></a>
+								<a href="hangman/index.html" class="image"><img src="images/hangman-game.png" alt="" /></a>
 								<div class="inner">
 									<h4>Hangman Game</h4>
 									<p>A small game application to entertain myself.</p>
