adding new pages to portfolio

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						</p>
 						<p>
 							On my free time I like to solve problems and create my own projects, using mainly JavaScript, React and
-							Node.js. Currently, I'm working on my Wedding E-commerce Website.
+							Node.js. Currently, I'm working on an E-commerce Website made entirely with MERN Stack.
 						</p>
 					</div>
 				</section>
@@ -99,10 +99,11 @@
 						<h3>Few Accomplishments</h3>
 						<p>
 							Accomplishments below include not only LN ERP but also some personal projects using other technologies.
+							Click on each one to learn more about my work.
 						</p>
 						<div class="features">
 							<article>
-								<a href="#" class="image"><img src="images/infor-logo.png" alt="" /></a>
+								<a href="" class="image"><img src="images/infor-logo.png" alt="" /></a>
 								<div class="inner">
 									<h4>BFlow Functionality</h4>
 									<p>
@@ -118,7 +119,9 @@
 								</div>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/exchange-rate-calculator.png" alt="" /></a>
+								<a href="projects/exchange-rate-calculator.html" class="image"
+									><img src="images/exchange-rate-calculator.png" alt=""
+								/></a>
 								<div class="inner">
 									<h4>Exchange Rate Calculator</h4>
 									<p>
@@ -128,7 +131,7 @@
 								</div>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/meal-finder.png" alt="" /></a>
+								<a href="projects/meal-finder.html" class="image"><img src="images/meal-finder.png" alt="" /></a>
 								<div class="inner">
 									<h4>Meal Finder</h4>
 									<p>
@@ -138,7 +141,9 @@
 								</div>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/expense-tracker.png" alt="" /></a>
+								<a href="projects/expense-tracker.html" class="image"
+									><img src="images/expense-tracker.png" alt=""
+								/></a>
 								<div class="inner">
 									<h4>Expense Tracker</h4>
 									<p>
@@ -148,14 +153,16 @@
 								</div>
 							</article>
 							<article>
-								<a href="hangman/index.html" class="image"><img src="images/hangman-game.png" alt="" /></a>
+								<a href="projects/hangman.html" class="image"><img src="images/hangman-game.png" alt="" /></a>
 								<div class="inner">
 									<h4>Hangman Game</h4>
 									<p>A small game application to entertain myself.</p>
 								</div>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/movie-seat-booking.png" alt="" /></a>
+								<a href="projects/movie-seat-booking.html" class="image"
+									><img src="images/movie-seat-booking.png" alt=""
+								/></a>
 								<div class="inner">
 									<h4>Movie Seat Booking</h4>
 									<p>Project created with more CSS than Javascript to handle the styles and effects.</p>
