--- a/projects/hangman.html
+++ b/projects/hangman.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hangman</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="styleHangman.css" />
 	</head>
 	<body>
 		<h1>Hangman</h1>
@@ -46,5 +46,5 @@
 			<p>You have already entered this letter</p>
 		</div>
 	</body>
-	<script src="script.js"></script>
+	<script src="scriptHangman.js"></script>
 </html>
