--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						</p>
 						<div class="features">
 							<article>
-								<a href="" class="image"><img src="images/infor-logo.png" alt="" /></a>
+								<a class="image"><img src="images/infor-logo.png" alt="" /></a>
 								<div class="inner">
 									<h4>BFlow Functionality</h4>
 									<p>
@@ -115,6 +115,16 @@
 										Improved the integration between the Brazilian Localization and the financial module when creating
 										the Accounts Payable document (ACP) automatically through the Brazilian Fiscal Document, known as
 										Nota Fiscal.
+									</p>
+								</div>
+							</article>
+							<article>
+								<a class="image"><img src="images/techlines1.png" alt="" /></a>
+								<div class="inner">
+									<h4>E-commerce Website</h4>
+									<p>
+										Project created with MERN Stack, Redux and ChakraUI. My main difficult in this project was to handle
+										the payment gateway API and Redux but in the end it was a great step for my professional growth.
 									</p>
 								</div>
 							</article>
