--- a/index.html
+++ b/index.html
@@ -163,10 +163,12 @@
 								</div>
 							</article>
 							<article>
-								<a href="projects/hangman.html" class="image"><img src="images/hangman-game.png" alt="" /></a>
+								<a href="projects/dom-array-methods.html" class="image"
+									><img src="images/dom-array-methods.png" alt=""
+								/></a>
 								<div class="inner">
-									<h4>Hangman Game</h4>
-									<p>A small game application to entertain myself.</p>
+									<h4>DOM Array Methods</h4>
+									<p>A small application consuming API to show data on DOM.</p>
 								</div>
 							</article>
 							<article>
