--- a/index.html
+++ b/index.html
@@ -119,12 +119,23 @@
 								</div>
 							</article>
 							<article>
-								<a class="image"><img src="images/techlines1.png" alt="" /></a>
+								<a href="https://techlines-ai2s.onrender.com/" class="image"
+									><img src="images/techlines.png" alt=""
+								/></a>
 								<div class="inner">
 									<h4>E-commerce Website</h4>
+									<p>Project created using MERN Stack, Redux and ChakraUI. I have added tons of features such as:</p>
+									<ul>
+										<li>Redux Setup for Product, Users and Cart;</li>
+										<li>Login and registration through Google OAuth;</li>
+										<li>
+											Checkout process using Payment Gateway (Efi Bank) to generate QR Code and to have the possibility
+											of adding installments when paying through credit card;
+										</li>
+									</ul>
 									<p>
-										Project created with MERN Stack, Redux and ChakraUI. My main difficult in this project was to handle
-										the payment gateway API and Redux but in the end it was a great step for my professional growth.
+										My main difficult in this project was to handle the payment gateway API and Redux but in the end it
+										was a great step for my professional growth.
 									</p>
 								</div>
 							</article>
