--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 					<div class="container">
 						<h3>Things I Can Do</h3>
 						<p>
-							I have more than 10 years of experience working on a Multinacional Company, which helped me enhnace my
-							personal and professional skill set. Some of them includes:
+							I have more than 10 years of experience working on a Multinacional Company, which helped me enhance my
+							personal and professional skill set. Some of those skills include:
 						</p>
 						<ul class="feature-icons">
 							<li class="icon solid fa-code">Write/Design Code</li>
@@ -126,11 +126,12 @@
 									<h4>E-commerce Website</h4>
 									<p>Project created using MERN Stack, Redux and ChakraUI. I have added tons of features such as:</p>
 									<ul>
-										<li>Redux Setup for Product, Users and Cart;</li>
+										<li>Redux Setup for Product, Order, Users and Cart;</li>
 										<li>Login and registration through Google OAuth;</li>
+										<li>Use of Postman to manage backend routes;</li>
 										<li>
 											Checkout process using Payment Gateway (Efi Bank) to generate QR Code and to have the possibility
-											of adding installments when paying through credit card;
+											of adding installments when paying through credit card.
 										</li>
 									</ul>
 									<p>
