few tweaks to accomplishments

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 			</nav>
 			<footer>
 				<ul class="icons">
-					<li>
+					<!--li>
 						<a href="https://www.instagram.com/gamaatos/" class="icon brands fa-instagram"
 							><span class="label">Instagram</span></a
 						>
-					</li>
+					</li -->
 					<li>
 						<a href="https://github.com/gabriellmatos" class="icon brands fa-github"
 							><span class="label">Github</span></a
@@ -98,26 +98,12 @@
 					<div class="container">
 						<h3>Few Accomplishments</h3>
 						<p>
-							Accomplishments below include not only LN ERP but also some personal projects using other technologies.
-							Click on each one to learn more about my work.
+							Accomplishments below include not only LN ERP but also some personal projects using modern technologies
+							such as React, Javascript, CSS and HTML. Also, have created full-stack projects using MongoDB, Express,
+							React and Node. Click on each one to learn more about my work.
 						</p>
 						<div class="features">
-							<article>
-								<a class="image"><img src="images/infor-logo.png" alt="" /></a>
-								<div class="inner">
-									<h4>BFlow Functionality</h4>
-									<p>
-										Creation and use of Business Flow automation tools for LN Cloud Edition functionalities. This tool
-										helped optimize operations and improve the end-user experience, making the product failure-proof.
-									</p>
-									<h4>Improved Integration Between Modules</h4>
-									<p>
-										Improved the integration between the Brazilian Localization and the financial module when creating
-										the Accounts Payable document (ACP) automatically through the Brazilian Fiscal Document, known as
-										Nota Fiscal.
-									</p>
-								</div>
-							</article>
+							<article></article>
 							<article>
 								<a href="https://techlines-ai2s.onrender.com/" class="image"
 									><img src="images/techlines.png" alt=""
@@ -192,6 +178,22 @@
 									<p>Project created with more CSS than Javascript to handle the styles and effects.</p>
 								</div>
 							</article>
+							<article>
+								<a class="image"><img src="images/infor-logo.png" alt="" /></a>
+								<div class="inner">
+									<h4>BFlow Functionality</h4>
+									<p>
+										Creation and use of Business Flow automation tools for LN Cloud Edition functionalities. This tool
+										helped optimize operations and improve the end-user experience, making the product failure-proof.
+									</p>
+									<h4>Improved Integration Between Modules</h4>
+									<p>
+										Improved the integration between the Brazilian Localization and the financial module when creating
+										the Accounts Payable document (ACP) automatically through the Brazilian Fiscal Document, known as
+										Nota Fiscal.
+									</p>
+								</div>
+							</article>
 						</div>
 					</div>
 				</section>
@@ -203,11 +205,11 @@
 						<!-- <p>Send me a message in case you are interested on my work</p> -->
 						<div class="row gtr-uniform">
 							<ul class="icons-bottom">
-								<li>
+								<!-- li>
 									<a href="https://www.instagram.com/gamaatos/" class="icon brands fa-instagram"
 										><span class="label">Instagram</span></a
 									>
-								</li>
+								</li -->
 								<li>
 									<a href="https://github.com/gabriellmatos" class="icon brands fa-github"
 										><span class="label">Github</span></a
